syntax = "proto3";

option go_package = "protos/simple";

package simple;

service Call {
  rpc ReqRes (CallRequest) returns (CallResponse) {}
}

message CallRequest {
  string name = 1;
}

message CallResponse {
  string message = 1;
}


//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./protos/topk.proto